# lineFollowerRobot

./: .gitignore  .gitmodules  CMakeLists.txt  LowPassFilter.cpp  LowPassFilter.hpp  README.md  bandpass.cpp  bandpass.h  doxylineFollowerRobot  external.cpp  external.h  gplots.plg  main.cpp  neural.cpp  neural.h  serialib.cpp  serialib.h
Arduino/: sumobot_sketch.ino
Arduino/sumobot_sketch/: sumobot_sketch.ino
clBP/include/clbp/: Layer.h  Net.h  Neuron.h
clBP/lib/: Layer.cpp  Net.cpp  Neuron.cpp
tracking/: Source.cpp
